classDiagram-v2
direction LR

%% ==================== FRONTEND ====================

class TransactionDetailVM {
    <<viewModel>>
    + TransactionId : int
    + StripeSessionId : string?
    + StripePaymentIntentId : string?
    + Date : DateTime?
    + Status : string?
    + Currency : string?
    + BuyerName : string
    + BuyerEmail : string
    + CourseTitle : string
    + CourseThumbnail : string?
    + InstructorName : string
    + InstructorEmail : string
    + GrossAmount : decimal
    + OriginalPrice : decimal
    + DiscountAmount : decimal
    + CouponUsed : bool
    + CouponCode : string?
    + CouponType : string?
    + CouponDiscountValue : decimal?
    + TransferRate : decimal
    + InstructorPayout : decimal
    + PlatformProfit : decimal
    + IsPaid : bool
    + RefundReason : string?
    + RefundRequestedAt : DateTime?
    + RefundAdminNote : string?
}

class TransactionControllerFE["TransactionController"] {
    <<frontend controller>>
    + Detail(id: int) Task~IActionResult~
}

%% ==================== BACKEND ====================

class TransactionDetailDto {
    <<dto>>
    + TransactionId : int
    + StripeSessionId : string?
    + StripePaymentIntentId : string?
    + Date : DateTime?
    + Currency : string?
    + Status : string?
    + BuyerName : string
    + BuyerEmail : string
    + CourseTitle : string
    + CourseThumbnail : string?
    + InstructorName : string
    + InstructorEmail : string
    + OriginalPrice : decimal
    + GrossAmount : decimal
    + DiscountAmount : decimal
    + CouponUsed : bool
    + CouponCode : string?
    + CouponType : string?
    + CouponDiscountValue : decimal?
    + TransferRate : decimal
    + InstructorPayout : decimal
    + PlatformProfit : decimal
    + IsPaid : bool
    + RefundReason : string?
    + RefundAdminNote : string?
    + RefundRequestedAt : DateTime?
}

class TransactionControllerBE["TransactionController"] {
    <<backend controller>>
    - _transactionService : ITransactionService
    + GetTransactionDetail(id: int) Task~IActionResult~
}

class ITransactionService {
    <<interface>>
    + GetTransactionDetailAsync(transactionId: int) Task~TransactionDetailDto?~
}

class TransactionService {
    <<service>>
    - _repo : ITransactionRepository
    + GetTransactionDetailAsync(transactionId: int) Task~TransactionDetailDto?~
}

class ITransactionRepository {
    <<interface>>
    + GetTransactionDetailAsync(transactionId: int) Task~TransactionDetailDto?~
}

class TransactionRepository {
    <<repository>>
    - _context : AppDbContext
    + GetTransactionDetailAsync(transactionId: int) Task~TransactionDetailDto?~
}

class AppDbContext {
    <<dbcontext>>
    + Transactions : DbSet~Transaction~
    + TransactionExts : DbSet~TransactionExt~
    + OrderItems : DbSet~OrderItem~
    + InstructorPayouts : DbSet~InstructorPayout~
    + Accounts : DbSet~Account~
    + Users : DbSet~User~
    + Courses : DbSet~Course~
}

%% ==================== DOMAIN ENTITIES ====================

class OrderItem {
    <<entity>>
    + Id : int
    + OrderId : int?
    + CourseId : int?
    + PurchasePrice : decimal
    + CouponUsed : bool?
    + OriginalPrice : decimal?
    + CouponCode : string?
    + CouponType : string?
    + DiscountAmount : decimal
    + Course : Course?
    + Order : OrderInfo?
    + Transactions : ICollection~Transaction~
}

class Course {
    <<entity>>
    + CourseId : int
    + InstructorId : int?
    + CategoryId : int?
    + CouponId : int?
    + Title : string
    + Description : string?
    + Price : decimal
    + CourseThumbnailUrl : string?
    + CreatedAt : DateTime?
    + UpdatedAt : DateTime?
    + CourseStatus : string?
    + CourseFlagCount : int?
    + WhatYouWillLearn : string?
    + Requirements : string?
    + ModerationFeedback : string?
    + LastApprovedAt : DateTime?
    + IsRemoved : bool
    + ThreatLevel : AiThreatLevel
}

class TransactionExt {
    <<entity>>
    + TransactionId : int
    + RefundReason : string?
    + RefundAdminNote : string?
    + RefundRequestedAt : DateTime?
    + Transaction : Transaction
}

class Transaction {
    <<entity>>
    + TransactionId : int
    + OrderItemId : int?
    + AccountFrom : int?
    + AccountTo : int?
    + Amount : decimal
    + TransferRate : decimal
    + StripeSessionId : string?
    + StripePaymentintentId : string?
    + Currency : string?
    + TransactionsStatus : string?
    + TransactionType : string?
    + TransactionCreatedAt : DateTime?
    + TransactionExt : TransactionExt?
    + OrderItem : OrderItem?
    + AccountFromNavigation : Account?
    + AccountToNavigation : Account?
    + InstructorPayouts : ICollection~InstructorPayout~
}

class Account {
    <<entity>>
    + AccountId : int
    + Email : string
    + Username : string?
    + PasswordHash : string?
    + PhoneNumber : string?
    + AccountStatus : string?
    + AccountFlagCount : int?
    + AccountLastLoginAt : DateTime?
    + AuthProvider : string?
    + AvatarUrl : string?
    + RefreshToken : string?
    + RefreshTokenExpiryTime : DateTime?
    + IsVerified : bool
    + AccountCreatedAt : DateTime?
    + AccountUpdatedAt : DateTime?
    + User : User?
    + TransactionFroms : ICollection~Transaction~
    + TransactionTos : ICollection~Transaction~
}

class User {
    <<entity>>
    + UserId : int
    + FullName : string
    + Bio : string?
    + DateOfBirth : DateOnly?
    + Instructor : Instructor?
    + UserNavigation : Account
}

class InstructorPayout {
    <<entity>>
    + PayoutId : int
    + TransactionId : int?
    + InstructorId : int?
    + PayoutAmount : decimal
    + PayoutDate : DateTime
    + IsPaid : bool
    + PayoutStatus : string
    + StripeTransferId : string?
    + StripePayoutId : string?
    + PaidToBankAt : DateTime?
    + Transaction : Transaction?
}

%% ==================== RELATIONSHIPS ====================

%% UI to Services
TransactionControllerFE ..> TransactionDetailVM
TransactionControllerFE ..> TransactionControllerBE
TransactionControllerBE ..> TransactionDetailDto
TransactionControllerBE --> ITransactionService
TransactionService ..|> ITransactionService
TransactionService --> ITransactionRepository
ITransactionService ..> TransactionDetailDto
TransactionService ..> TransactionDetailDto

TransactionRepository ..|> ITransactionRepository
ITransactionRepository ..> TransactionDetailDto
TransactionRepository ..> TransactionDetailDto
TransactionRepository --> AppDbContext

%% Repository to Entities
TransactionRepository ..> Transaction
TransactionRepository ..> TransactionExt
TransactionRepository ..> OrderItem
TransactionRepository ..> InstructorPayout
TransactionRepository ..> Account
TransactionRepository ..> User
TransactionRepository ..> Course

%% AppDbContext to Entities
AppDbContext --> Transaction
AppDbContext --> TransactionExt
AppDbContext --> OrderItem
AppDbContext --> InstructorPayout
AppDbContext --> Account
AppDbContext --> User
AppDbContext --> Course

%% Entity Associations
Transaction -- TransactionExt
Transaction -- OrderItem
Transaction -- Account
Transaction -- InstructorPayout
OrderItem -- Course
Account -- User

%% ==================== STYLES ====================
classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
